# PyQuiver

./: .gitignore  CHANGELOG.md  DETAILS.md  LICENSE.txt  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml
bug/: endo-b972-dz-pcm.out  endo-b972-dz-smd.out  isoprene-b972-dz-smd.out  isoprene_endo.config  maleic_endo.config
bug2/: HCN-b3lyp-631gd-gas-tight.out  stephan-addition_ts-b3lyp-631gd-gas.out  stephan_cyanide.config
linear/: acetylene.out  h2.out
pyquiver/: __init__.py  __main__.py  batch.py  cli.py  config.py  constants.py  kie.py  orca.py  quiver.py  results.py  settings.py  tunneling.py
pyquiver/parsers/: __init__.py  _common.py  gaussian.py  native.py  orca.py
scripts/: SNIP.md  pyquiver.ipynb  skodgetruhlar.ipynb
src/: AUTOQUIVER.md  autoquiver.py  config.py  constants.py  kie.py  orca.py  quiver.ipynb  quiver.py  settings.py  snip.awk  test.config  tests.py  utility.py
test/: README.md  SM.out  claisen.config  claisen_demo.config  claisen_gs.qin  claisen_ts.out  claisen_ts.qin  co2.out  conftest.py  expected_output.txt  grid_230_270.out  iitensor.out  kie.config  notes  rotation.out  rotation2.out  rotation3.out  test.py  test_batch.py  test_cli.py  test_config.py  test_constants.py  test_edge_cases.py  test_gaussian_errors.py  test_isotopologue.py  test_kie.py  test_package.py  test_parallel.py  test_parsers.py  test_physics.py  test_regression.py  test_results.py  test_serialization.py  test_tunneling.py
tutorial/: TUTORIAL.md
tutorial/gaussian/: claisen_demo.config  claisen_gs.out
(+8 files in other folders)
